<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="intent_toggle_scan">uk.co.markormesher.easymaps.scannerapp.toggle_scan</string>
	<string name="intent_stop_scan">uk.co.markormesher.easymaps.scannerapp.stop_scan</string>
	<string name="intent_scan_status_updated">uk.co.markormesher.easymaps.scannerapp.scan_status_updated</string>

	<string name="app_name">EasyMaps Scanner</string>

	<string name="thanks_title">Thank You - You\'re Amazing!</string>
	<string name="thanks_body"><![CDATA[
		Seriously, thank you so much for using this app and helping this project.
		What I\'m building is pretty ambitious, and it will only work if I can collect lots of real-world data.
		Without you this project would be going nowhere, so I mean it when I say \'thank you\'!
	]]></string>

	<string name="prizes_title">Prizes</string>
	<string name="prizes_body"><![CDATA[
		Three volunteers will win a £20 Amazon voucher at the end of this project, and the more you scan, the better your odds!
		Tap \'Did I Win?\' in the app menu to check whether you\'re a winner.
		Full details: http://easymaps.markormesher.co.uk.
	]]></string>

	<string name="instructions_title">Instructions</string>
	<string name="instructions_body_1"><![CDATA[
		Tap the button at the top to start scanning whenever you\'re travelling on the London Underground; tap again to disable it when you finish your journey.
		The scanner will run in the background, so you don\'t need to keep the app open.
	]]></string>
	<string name="instructions_body_2"><![CDATA[
		Don\'t worry if you forget to turn the scanner on before you start travelling!
		You can turn it on and off at any point, above ground or below.
	]]></string>

	<string name="data_collection_title">Data Collection</string>
	<string name="data_collection_body"><![CDATA[
		When scanning is enabled, the app will record the IDs of WiFi networks visible to your device.
		This app also records an anonymous ID for your device, which cannot be traced back to you.
		That\'s all it collects - no location data, no personal data, and nothing that can identify you.
		You can check your ID by tapping \'Display User ID\' in the app menu.
	]]></string>

	<string name="withdrawal_title">Withdrawal</string>
	<string name="withdrawal_body"><![CDATA[
		If you want to stop taking part in this project, all you need to do is stop using the app (you can uninstall it too, if you want to).
		If you also want to withdraw the data that you\'ve generated so far, you can do so from the app menu.
	]]></string>

	<string name="contact_title">Contact Details</string>
	<string name="contact_body"><![CDATA[
		You can contact me easily so from the app menu - just tap \'Contact Mark\'.
		If anything went wrong, tap \'Send Bug Report\' in the menu and I\'ll get it fixed!
	]]></string>

	<string name="ethics_ref">King\'s College London University Research Ethics Committee Reference: LRU–16/17–3924.</string>

	<string name="scan_status_title_running">Scanner status: running</string>
	<string name="scan_status_title_not_running">Scanner status: not running</string>
	<string name="scan_status_title_unknown">Scanner status: unknown</string>
	<string name="scan_status_title_unknown_comment">Try closing the app and opening it again</string>
	<string name="scan_status_interval">Scan interval: %d seconds</string>
	<string name="session_data_points_count">Data points this session: %,d</string>
	<string name="lifetime_data_points_count">Data points since installing: %,d</string>

	<string name="scan_toggle_start">Start Scanning</string>
	<string name="scan_toggle_stop">Stop Scanning</string>

	<string name="setting_warning_wifi">Error: your WiFi is disabled!</string>
	<string name="setting_warning_location">Error: location services are disabled!</string>
	<string name="setting_warning_location_note">Note: location services are required for access to low-level WiFi information; location is never recorded.</string>
	<string name="setting_warning_button">Tap to enable</string>

	<string name="scanning_notification_title">EasyMaps Scanner is running</string>
	<string name="scanning_notification_message">%1$,d data point%2$s this session</string>
	<string name="uploading_notification_title">Uploading EasyMaps scan logs</string>

	<string name="menu_option_user_id">Display User ID</string>
	<string name="user_id_title">Your User ID</string>
	<string name="user_id_copied">Your user ID was copied to your clipboard</string>

	<string name="menu_option_debug_report">Send Debug Report</string>
	<string name="debug_report_title">EasyMaps Scanner Debug Report</string>
	<string name="debug_report_chooser_title">Send to Mark</string>
	<string name="debug_report_copied">The report was copied to your clipboard</string>

	<string name="menu_option_contact">Contact Mark</string>
	<string name="contact_chooser_title">Contact Mark</string>
	<string name="contact_text">Please feel free to send me questions, bug reports, suggestions, general comments, etc.\n\n---\n%s</string>

	<string name="menu_option_scan_interval">Change Scan Interval</string>
	<string name="change_scan_interval_title">Change Scan Interval</string>
	<string name="change_scan_interval_body">The interval you choose below tells the app approximately how often to scan nearby WiFi networks. A lower number means more data points, but slightly higher battery usage.</string>

	<string name="menu_option_withdraw_data">Withdraw Data</string>
	<string name="withdraw_data_confirm_title">Withdraw Your Data?</string>
	<string name="withdraw_data_confirm_body"><![CDATA[
		Your data is <strong>completely anonymous</strong> and cannot be linked to you.
		<br /><br />
		Tap \'Yes\' below to send your ID to the server, triggering deletion of your data within 48 hours.
		This <strong>cannot be undone</strong>.
		Are you sure you want to withdraw your data?
	]]></string>
	<string name="withdraw_success">Your data will be deleted within 48 hours.</string>
	<string name="withdraw_failure">Sorry, that didn\'t work! Make sure you\'re online.</string>

	<string name="su_prompt_title">Super User Mode</string>
	<string name="su_prompt_body">Enter the PIN below to enable super user mode:</string>
	<string name="su_enabled">You are in super user mode</string>

	<string name="menu_option_change_network">Change Network</string>
	<string name="change_network_title">Change Network</string>
	<string name="change_network_error_scanner_running">Please stop the scanner first</string>
	<string name="change_network_set_to">Network set to \'%s\'</string>
	<string name="change_network_invalid_input">Sorry, that\'s not a valid network</string>
	<string name="scan_status_network">Network: \'%s\'</string>

	<string name="menu_option_winner_check">Did I Win?</string>
	<string name="winner_check_checking">Checking…</string>
	<string name="winner_check_check_failed">Sorry, that didn\'t work! Make sure you\'re online.</string>
	<string name="winner_check_too_soon"><![CDATA[
		Looks like the results aren\'t out yet!
		<br /><br />
		Winners should be announced in early-April, so sit tight!
	]]></string>
	<string name="winner_check_nope"><![CDATA[
		<strong>Sorry</strong>, you weren\'t a winner!
		<br /><br />
		But hey, winning isn\'t everything. You\'ve still been part of a project that could have huge impacts, and I really appreciate your help!
	]]></string>
	<string name="winner_check_nice_try">Nice try.</string>
	<string name="winner_check_winner"><![CDATA[
		<strong>Congratulations, you\'re a winner! Well done!</strong>
		<br /><br />
		Your Amazon gift code has been copied to your clipboard - make sure you paste it into a note or a blank message to keep it safe!
	]]></string>

</resources>
