<?xml version="1.0" encoding="utf-8"?>
<menu
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
			android:id="@+id/winner_check"
			android:title="@string/menu_option_winner_check"
			app:showAsAction="never"/>

	<item
			android:id="@+id/user_id"
			android:title="@string/menu_option_user_id"
			app:showAsAction="never"/>

	<item
			android:id="@+id/debug_report"
			android:title="@string/menu_option_debug_report"
			app:showAsAction="never"/>

	<item
			android:id="@+id/contact"
			android:title="@string/menu_option_contact"
			app:showAsAction="never"/>

	<item
			android:id="@+id/scan_interval"
			android:title="@string/menu_option_scan_interval"
			app:showAsAction="never"/>

	<item
			android:id="@+id/withdraw"
			android:title="@string/menu_option_withdraw_data"
			app:showAsAction="never"/>

	<item
			android:id="@+id/change_network"
			android:title="@string/menu_option_change_network"
			app:showAsAction="never"/>

</menu>
