<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activities.MainActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin">

		<LinearLayout
				android:id="@+id/toggle_scanning_button_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:layout_marginBottom="@dimen/space_small"
				android:gravity="center">

			<Button
					android:id="@+id/toggle_scanning_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/scan_toggle_start"
					android:theme="@style/Button"/>

		</LinearLayout>

		<LinearLayout
				android:id="@+id/setting_warning_button_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:layout_marginBottom="@dimen/space_small"
				android:orientation="vertical"
				android:visibility="gone"
				android:gravity="center">

			<TextView
					android:id="@+id/setting_warning"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/space_micro"
					style="@style/Text.Error"/>

			<Button
					android:id="@+id/setting_warning_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/setting_warning_button"
					android:theme="@style/Button"/>

			<TextView
					android:id="@+id/setting_warning_note"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/space_micro"
					style="@style/Text.Note"/>

		</LinearLayout>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginLeft="@dimen/space_large"
				android:layout_marginRight="@dimen/space_large"
				android:layout_marginBottom="@dimen/space_small"
				android:background="@color/divider"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:text="@string/scan_status_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:id="@+id/status_message"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/scan_status_unknown"
				style="@style/Text"/>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginLeft="@dimen/space_large"
				android:layout_marginRight="@dimen/space_large"
				android:layout_marginBottom="@dimen/space_small"
				android:background="@color/divider"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/thanks_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/thanks_body"
				style="@style/Text"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/prizes_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/prizes_body"
				android:autoLink="web"
				style="@style/Text"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/instructions_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_micro"
				android:text="@string/instructions_body_1"
				style="@style/Text"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/instructions_body_2"
				style="@style/Text"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/data_collection_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/data_collection_body"
				style="@style/Text"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_title"
				style="@style/Text.SubHeading"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/space_small"
				android:text="@string/contact_body"
				style="@style/Text"/>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginLeft="@dimen/space_large"
				android:layout_marginRight="@dimen/space_large"
				android:layout_marginBottom="@dimen/space_small"
				android:background="@color/divider"/>

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ethics_ref"
				style="@style/Text.Note"/>

	</LinearLayout>

</ScrollView>
